# synthetic_silviculture

./: .gitignore  Cargo.toml  README.md
assets/: voronoi_key.txt
assets/shaders/: basic_frag.glsl  basic_vert.glsl  branch_frag.glsl  branch_vert.glsl  branch_vertex_compute.glsl  flat_terrain_vert.glsl  heightmap_terrain_vert.glsl
examples/: branch_mesh_render.rs  branch_render.rs  cube_render.rs  heightmap_terrain_render.rs  plant_growth.rs  plants_on_terrain_render.rs  rendered_plant_growth.rs  voronoi_write.rs
examples/example_shaders/: cube_render_frag.glsl  cube_render_vert.glsl
src/: app.rs  branch.rs  branch_development.rs  branch_node.rs  branch_old.rs  branch_prototypes.rs  camera_fn_lib.rs  debug.rs  environment.rs  fixed_schedule.rs  general.rs  general_update.rs  lib.rs  light_cells.rs  main.rs  plant.rs  plant_development.rs  plant_species.rs  terrain.rs  tests.rs  transform.rs  voronoi_noise.rs
src/apps/: graphics_app.rs  looped_app.rs  mod.rs
src/branches/: branch.rs  branch_development.rs  branch_node.rs  branch_prototypes.rs  branch_sorting.rs  mod.rs  node_sorting.rs
src/environment/: light_cells.rs  mod.rs  params.rs  terrain.rs  terrain_graph.rs  terrain_non_graph.rs
src/general/: bounding_box.rs  bounding_sphere.rs  camera_maths.rs  matrix_four.rs  matrix_three.rs  mod.rs  tests.rs  vector3.rs  vector_four.rs  vector_three.rs  vector_two.rs
src/graphics/: branch_graphics.rs  branch_mesh.rs  branch_mesh_gen.rs  camera_maths.rs  general_graphics.rs  gui.rs  mesh.rs  mod.rs  terrain_graphics.rs  test_cube.rs
src/maths/: bounding_box.rs  bounding_sphere.rs  matrix_four.rs  matrix_three.rs  mod.rs  tests.rs  vector_four.rs  vector_three.rs  (+2 more)
(+10 files in other folders)
