[package]
name = "synthetic_silviculture"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.10"
image = "0.24.5"
itertools = "0.10.5"
plotters = "0.2.15"
rand = "0.8.5"
voronator = "0.2"

winit = "0.28"
vulkano = "0.33"
vulkano-util = "0.32"
vulkano-shaders = "0.33"
vulkano-win = "0.33"
egui = "0.21"
egui_winit_vulkano = "0.24"
bytemuck = "1.12.1"

[profile.dev]
opt-level = 0


[features]
vulkan_graphics = []

[[example]]
name = "rendered_plant_growth"
required-features = ["vulkan_graphics"]

[[example]]
name = "heightmap_terrain_render"
required-features = ["vulkan_graphics"]