[package]
name = "synthetic_silviculture"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.2"
maths = {git = "https://github.com/hindlet/rust_maths.git", package = "rust_maths", version = "*"}

[profile.dev]
opt-level = 0


[features]
